# Tugas_Besar_URO_-19624051-FarisWirakusuma-

./: README  README.md
install/: local_setup.sh  setup.sh
install/package_tubes_uro/lib/package_tubes_uro/: urdf_example_node
install/package_tubes_uro/share/package_tubes_uro/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/package_tubes_uro/share/package_tubes_uro/cmake/: package_tubes_uroConfig-version.cmake  package_tubes_uroConfig.cmake
install/package_tubes_uro/share/package_tubes_uro/environment/: ament_prefix_path.dsv  path.dsv
install/package_tubes_uro/share/package_tubes_uro/launch/: launch_robot_in_gazebo.launch  launch_robot_in_gazebo.launch.py  launch_robot_in_gazebo.launch.xml  launch_robot_in_rviz.launch.py  spawn_entity.py  spawn_robot.xml  test.launch.py
install/package_tubes_uro/share/package_tubes_uro/urdf/: robot_tubes_uro.urdf  robot_tubes_uro_gazebo.urdf  robot_tubes_uro_gazebo.urdf.xacro  robot_tubes_uro_gazebo.xacro
install/package_tubes_uro/share/package_tubes_uro/worlds/: empty.sdf  empty.world  (+1 more)
log/: latest_build
src/package_tubes_uro/: CMakeLists.txt
src/package_tubes_uro/config/: robot_tubes_uro_config.rviz
src/package_tubes_uro/launch/: launch_robot_in_gazebo.launch.py  launch_robot_in_rviz.launch.py  spawn_robot.xml
src/package_tubes_uro/map/: map.yaml
src/package_tubes_uro/src/: urdf_example_node.cpp
src/package_tubes_uro/urdf/: robot_tubes_uro_gazebo.urdf.xacro
src/package_tubes_uro/worlds/: empty_world.sdf
(+2 files in other folders)
